--- a/hotel/package.json
+++ b/hotel/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
+    "next": "14.1.3",
+    "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "react-redux": "^9.1.0",
+    "sass": "^1.72.0"
   },
   "devDependencies": {
+    "@types/node": "20.11.29",
+    "@types/react": "18.2.67",
     "eslint": "^8",
     "eslint-config-next": "14.1.3"
   }
