--- a/hotel/package.json
+++ b/hotel/package.json
@@ -11,15 +11,21 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
-    "sass": "^1.72.0"
+    "react-youtube": "^10.1.0",
+    "sass": "^1.72.0",
+    "smooth-scrollbar-react": "^2.4.1",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/node": "20.11.29",
