--- a/hotel/package.json
+++ b/hotel/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "next": "14.1.3",
