--- a/admin/package.json
+++ b/admin/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.2.2",
     "apexcharts": "^3.45.2",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "flatpickr": "^4.6.13",
     "js-cookie": "^3.0.5",
     "jsvectormap": "^1.5.3",
@@ -20,8 +21,13 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "react-toastify": "^10.0.5",
+    "saas": "^1.0.0",
+    "sass": "^1.72.0",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
