--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/auth/signin/page.js", "src/app/my-hotels/page.js", "src/app/page.js", "src/components/Layouts/IsLogin.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/auth/signin/page.js", "src/app/my-hotels/page.js", "src/app/page.js", "src/components/Layouts/IsLogin.jsx", "src/app/auth/signup/page.js"],
   "exclude": ["node_modules"]
 }
